@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.0b11
 
+	- filename_relative() didn't always return the correct
+	  relative path.
 	- Updated the test makefile to work with more versions
 	  of "make".
 	- Added new "--with-optim" configure option to set the
